html-parser.peg
{
  var util = require('./parser-util.js')

  lineno = 1;

  doc = { imports: [],
         content: [],
         annotation: null}
}

start
  = document { return doc; }

document
  = l:importlist document { doc.imports = doc.imports.concat(l); }
  / c:content document { doc.content = doc.content.concat(c); }
  / { }

importlist
  = i:import l:importlist { return [e].concat(l); }
  / i:import { return [i]; }

import
  = "@import " modulename:module space { 
    return {'type': 'import', 'module': modulename };
  }

module
  = name:[a-zA-Z\.]+ { return name.join(""); }

content
  = text:[^<]+ rest:content { 
    var node = {
      type: 'text',
      content: text.join('')
    };
    return [node].concat(rest);
  }
  / text:[^<]+ { 
    var node = {
      type: 'text',
      content: text.join('')
    };
    return [node];
  }
  / e:element rest:content {
    var node = {
      type: 'element',
      content: e
    };
    return [node].concat(rest);
  }
  / e:element {
    var node = {
      type: 'element',
      content: e
    };
    return [node];
  }

opentag
  = "<" starttag:literal space? attrs:attributelist? annotation:elementannotation?">" space? { 
    return {
      name: starttag,
      attributes: attrs === null ? [] : attrs,
      annotation: annotation
    };
  }

closetag
  = "</" endtag:literal ">" space? { return endtag }

element
  = starttag:opentag c:content? endtag:closetag { 
    if (starttag.name != endtag) {
      console.log("error " + lineno + ": Start tag <" + starttag.name + ">  does not match up with end tag </" + endtag + ">")
    }
    return {
      type: 'element', 
      name: starttag.name, 
      attributes: starttag.attributes,
      annotation: starttag.annotation,
      content: c === null ? [] : c,
      lineno: lineno };
  }

attributelist
  = a:attribute l:attributelist { return [a].concat(l); }
  / a:attribute { return [a]; }

attribute_value
  = "=\"" v:literallist "\"" {
    return v;
  }

attribute
  = name:literal values:attribute_value? space? {
    return {
      name: name,
      value: values === null ? [] : values
    };
  }

elementannotation
  = "@" functionname:module "()" {
    return functionname;
  }

literallist
  = lit:literal lst:literallist { return [lit].concat(lst); }
  / lit:literal { return [lit] }

literal
  = letters:[a-zA-Z0-9]+ space? { return letters.join(""); }

space
  = chars:[ \n\t]+ { 
    lineno += util.count_linebreaks(chars.join("")); // Increase current line.
    return "SPACE"
  }
